syntax = "proto3";

option go_package = "github.com/alex-a-renoire/sigma-homework/pkg/grpcserver";
package grpcserver;

import "google/protobuf/empty.proto";

service StorageService {
    rpc AddPerson(AddPersonRequest) returns (UUID) {}
    rpc GetPerson(UUID) returns (Person) {}
    rpc GetAllPersons(google.protobuf.Empty) returns (AllPersonsResponse) {}
    rpc UpdatePerson(Person) returns (google.protobuf.Empty) {}
    rpc DeletePerson(DeletePersonRequest) returns (google.protobuf.Empty) {}
} 


message UUID {
    string value = 1;
}

message AddPersonRequest {
    string name = 1;
}

message Person {
    UUID id = 1;
    string name = 2;
}

message AllPersonsResponse {
    repeated Person allPersons = 1;
}

message DeletePersonRequest {
    UUID id = 1;
}